Fully functional delete exercise or diet row when clicking delete button, moved it inside grid as otherwise its too much work/very buggy.

--- a/HealthApp/public/stylesheets/userDashboard_style.css
+++ b/HealthApp/public/stylesheets/userDashboard_style.css
@@ -92,7 +92,7 @@
     cursor: pointer;
 }
 
-#food-removeButtonsContainer
+/* #food-removeButtonsContainer
 {
     display: flex;
 }
@@ -106,7 +106,7 @@
 {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin-top: 28px;
 }
 
@@ -114,18 +114,18 @@
 {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin-top: 28px;
-}
+} */
 
 .deleteDietButton
 {
-   margin: 5px 5px;
+   /* margin: 5px 5px; */
 }
 
 .deleteExerciseButton
 {
-    margin: 5px 5px;
+    /* margin: 5px 5px; */
 }
 
 #dietButtonCenter
